--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
+    "bcryptjs-react": "^2.4.6",
+    "express": "^4.18.2",
     "firebase": "^9.19.1",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
     "react-bootstrap": "^2.7.2",
@@ -22,6 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "web": "nodemon ./server/index.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,5 +55,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
-  }
+  },
+  "description": "",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
